Enable JEI integration again